--- a/register.html
+++ b/register.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 <form action="" id="form">
-    <div id="login"><label >Логин: <input type="text" name="login"  required></label></div>
-    <div id="name"><label >Имя: <input type="text" name="name"  required></label></div>
-    <div id="email"><label >E-Mail: <input type="email" name="email"  required></label></div>
-    <div id="password"><label >Пароль: <input type="password" name="password"  required></label></div>
-    <div id="password_2"><label >Повтор: <input type="password" name="password_2"  required></label></div>
+    <div ><p id="login"></p><label >Логин: <input type="text" name="login"  required></label></div>
+    <div ><p id="name"></p> <label >Имя: <input type="text" name="name"  required></label></div>
+    <div ><p></p><label >E-Mail: <input type="email" name="email"  required></label></div>
+    <div ><p id="password"></p> <label >Пароль: <input type="password" name="password"  required></label></div>
+    <div ><p></p><label >Повтор: <input type="password" name="password_2"  required></label></div>
     <div><input type="submit" value="Send"></div>
     <div><p id="message"></p></div>
 </form>
