Fixed | Email and Space
Fixed
[+] Email
[+] Space in Login

--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
             <form action="" class="position-absolute top-50 start-50 translate-middle" id="form">
                 <div ><p id="login"></p><label >Логин: <input type="text" class="form-control" name="login"  required></label></div>
                 <div ><p id="name"></p> <label >Имя: <input type="text" class="form-control" name="name"  required></label></div>
-                <div ><p></p><label >E-Mail: <input type="email" class="form-control" name="email"  required></label></div>
+                <div ><p id="email"></p><label >E-Mail: <input type="email" class="form-control" name="email"  required></label></div>
                 <div ><p id="password"></p> <label >Пароль: <input type="password" class="form-control" name="password"  required></label></div>
                 <div ><p></p><label >Повтор: <input type="password" class="form-control" name="password_2"  required></label></div>
                 <br>
