--- a/login.html
+++ b/login.html
@@ -8,6 +8,11 @@
 </head>
 <body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+<noscript>
+    <div class="alert alert-warning" role="alert">
+        Поддержка JavaScript отключена в вашем браузере. Для продолжения работы требуется JavaScript
+    </div>
+</noscript>
 <div class="container min-vh-100 justify-content-center">
     <div class="row justify-content-center">
         <div class="col-6 text-center">
