--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
 <div class="container min-vh-100 justify-content-center">
     <div class="row justify-content-center">
         <div class="col-6 text-center">
-            <form action="" id="form" class="position-absolute top-50 start-50 translate-middle">
+            <form id="form" class="position-absolute top-50 start-50 translate-middle">
                 <div><label for="login">Логин: <input type="text" class="form-control" name="login" id="login" required></label></div>
                 <div><label for="password">Пароль: <input type="password" class="form-control" name="password" id="password" required></label></div>
                     <br><div><input type="submit" class="btn btn-primary" value="Войти"></div>
